Bug #24301 Next command hangs in mysql after creating new NDB table via LIKE operation.
Submitted: 14 Nov 2006 16:08 Modified: 6 Dec 2006 11:42
Reporter: Serge Kozlov
Status: Closed
Category:Server: Cluster Severity:S1 (Critical)
Version:5.1.14 OS:Linux (Linux FC4)
Assigned to: Martin Skold Target Version:

[14 Nov 2006 16:08] Serge Kozlov
Description:
Next executing operation in mysql freezes after creating a new NDB table via CREATE TABLE
.. LIKE.

How to repeat:
1. Start a cluster (1 ndb_mgmd, 2 ndbd, 1 mysqld) with simple configuration (see private
section)
2. Run mysql and repeat following commands:
 a) create table t1 (a int not null primary key, b int) engine=ndb;
 b) create table t2 like t1;
 c) select * from t1;
3. Now mysql hangs and can be interrupted trough Ctrl-C only.
[15 Nov 2006 12:07] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/15344

ChangeSet@1.2324, 2006-11-15 12:05:05+01:00, mskold@mysql.com +3 -0
  bug #24301  Next command hangs in mysql after creating new NDB table via LIKE
operation.: Locked mutex LOCK_open during operation
[6 Dec 2006 11:42] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.14 changelog.