bug #24301  Next command hangs in mysql after creating new NDB table via LIKE operation.: Locked mutex LOCK_open during operation